--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.giga.panicbutton">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.PanicButton">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <service
-            android:name="MainActivity"
-            android:foregroundServiceType="location"></service>
-    </application>
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
         tools:ignore="WrongManifestParent" />
@@ -32,4 +15,25 @@
     <uses-permission
         android:name="android.permission.SEND_SMS"
         tools:ignore="WrongManifestParent" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.PanicButton">
+        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <service
+            android:name=".MainActivity"
+            android:foregroundServiceType="location" />
+    </application>
+
 </manifest>
